добавлен функционал для администрирования мероприятий
