# internal/dto/team_dto/event_dto.go
@@ -1,10 +1,68 @@
 package team_dto
 
 import (
+	"time"
+
 	"github.com/google/uuid"
 
 	"ne_noy/internal/dto"
 )
+
+type TeamEventDto struct {
+	ID                uuid.UUID  `json:"id"`
+	Name              string     `json:"name"`
+	Description       *string    `json:"description"`
+	Cover             *string    `json:"cover"`
+	Status            string     `json:"status"`
+	StartsAt          time.Time  `json:"starts_at"`
+	EndsAt            *time.Time `json:"ends_at"`
+	TeamsConstraint   int        `json:"teams_constraint"`
+	TeamsCapMin       *int       `json:"teams_cap_min"`
+	TeamsCapMax       *int       `json:"teams_cap_max"`
+	Lat               *float64   `json:"lat"`
+	Lon               *float64   `json:"lon"`
+	Address           *string    `json:"address"`
+	AdditionalAddress *string    `json:"additional_address"`
+	VkPostID          *int64     `json:"vk_post_id"`
+}
+
+type CreateTeamEventDto struct {
+	Name              string     `json:"name"`
+	Description       *string    `json:"description"`
+	Cover             *string    `json:"cover"`
+	Status            string     `json:"status"`
+	StartsAt          time.Time  `json:"starts_at"`
+	EndsAt            *time.Time `json:"ends_at"`
+	TeamsConstraint   int        `json:"teams_constraint"`
+	TeamsCapMin       *int       `json:"teams_cap_min"`
+	TeamsCapMax       *int       `json:"teams_cap_max"`
+	Lat               *float64   `json:"lat"`
+	Lon               *float64   `json:"lon"`
+	Address           *string    `json:"address"`
+	AdditionalAddress *string    `json:"additional_address"`
+	VkPostID          *int64     `json:"vk_post_id"`
+}
+
+type UpdateTeamEventDto struct {
+	Name              *string    `json:"name"`
+	Description       *string    `json:"description"`
+	Cover             *string    `json:"cover"`
+	Status            *string    `json:"status"`
+	StartsAt          *time.Time `json:"starts_at"`
+	EndsAt            *time.Time `json:"ends_at"`
+	TeamsConstraint   *int       `json:"teams_constraint"`
+	TeamsCapMin       *int       `json:"teams_cap_min"`
+	TeamsCapMax       *int       `json:"teams_cap_max"`
+	Lat               *float64   `json:"lat"`
+	Lon               *float64   `json:"lon"`
+	Address           *string    `json:"address"`
+	AdditionalAddress *string    `json:"additional_address"`
+	VkPostID          *int64     `json:"vk_post_id"`
+}
+
+type DeleteTeamEventDto struct {
+	ID uuid.UUID `json:"id"`
+}
 
 type TeamDto struct {
 	ID           uuid.UUID         `json:"id"`
